--- a/_src/tex/aoc.tex
+++ b/_src/tex/aoc.tex
@@ -5,14 +5,22 @@
   December 2, 2019
   \thanks{Last updated \today}
 }
-\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{2}
 \begin{document}
 \frontmatter
 \maketitle
 \tableofcontents
 \mainmatter
 \newpage
-\input{allcode}
+
+\chapter{2018}
+\input{2018}
+
+\chapter{2019}
+\input{2019}
+
+\chapter{2021}
+\input{2021}
 
 \backmatter
 \newpage
