--- a/_src/tex/preamble.tex
+++ b/_src/tex/preamble.tex
@@ -2,7 +2,7 @@
 %% NOTE: https://tex.stackexchange.com/a/43628/45537
 %% \setmainfont[Mapping=tex-text,Numbers=OldStyle]{Palatino}
 %% \setsansfont[Mapping=tex-text,Numbers=OldStyle,Scale=MatchLowercase]{Gill Sans}
-\setmonofont[Mapping=tex-text,Scale]{Iosevka}
+\setmonofont[Mapping=tex-text,Scale]{Iosevka Nerd Font}
 
 
 %% HACK: https://tex.stackexchange.com/a/200725/45537
